css order changes

--- a/index.html
+++ b/index.html
@@ -1,51 +1,23 @@
 <!DOCTYPE html><html lang="de"><head>
-<!-- Zeichenkodierung --><meta charset="utf-8">
-<!-- Optimierung für Mobilgeräte --><meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- HTTP-Header --><meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!-- Metadaten -->
-<meta name="description" content="
-Sammlung von Themen über Informatik, kompakt.
-"><meta name="keywords" content="
-linux,windows,sicherheit,hacking,
-administration,code,shell,terminal,syntax,
-tool,programm,it,informatik,information,
-technologie,fachinformatik,computer,pc,
-system,netzwerk,integration,programmierung
-snippets,vorlagen,lernen,verstehen,
+<!-- ENCODE --><meta charset="utf-8">
+<!-- OPTIMIZE --><meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- SUPPORT --><meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!-- INFO -->
+<meta name="description" content="Sammlung von Themen über Informatik, kompakt.">
+<meta name="keywords" content="Linux,Windows,Cybersecurity,Hacking,Coding,Shell,Tools,Network-Basics"
 "><meta name="author" content="Jumi">
-<!-- Favicon --><link rel="icon" href="assets/img/ico/jumi.ico">
-<title>j|index</title>
-<!-- Styling -->
+<!-- FAVICON --><link rel="icon" href="assets/img/ico/jumi.ico">
+<!-- TITLE --><title>jumi.biz</title>
+<!-- CSS -->
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-<link rel="stylesheet" type="text/css" href="assets/css/menu.css">
-<!-- New Styling
-<link rel="stylesheet" type="text/css" href="assets/css/basic.css">
-<link rel="stylesheet" type="text/css" href="assets/css/layout.css">
-<link rel="stylesheet" type="text/css" href="assets/css/page.css">
-<link rel="stylesheet" type="text/css" href="assets/css/imported.css">
-<link rel="stylesheet" type="text/css" href="assets/css/animations.css">
-<link rel="stylesheet" type="text/css" href="assets/css/modal.css">
-<link rel="alternate stylesheet" type="text/css" href="inverted-theme.css" title="inverted theme">
-<link rel="alternate stylesheet" type="text/css" href="gamemode-theme.css" title="gamemode theme">
-<link rel="alternate stylesheet" type="text/css" href="sweet-theme.css" title="sweet theme">
-<link rel="alternate stylesheet" type="text/css" href="hacker-theme.css" title="hacker theme">
-<link rel="alternate stylesheet" type="text/css" href="xmas-theme.css" title="xmas theme">
-<link rel="alternate stylesheet" type="text/css" href="halloween-theme.css" title="halloween theme">
-<link rel="alternate stylesheet" type="text/css" href="party-theme.css" title="party theme">
-<link rel="stylesheet" type="text/css" href="print-horizontal.css" media="print and (orientation: portrait)">
-<link rel="stylesheet" type="text/css" href="print-vertical.css" media="print and (orientation: landscape)">
-<link rel="stylesheet" type="text/css" href="speech-optimized.css" media="speech">
-<link rel="stylesheet" href="termynal.css">-->
-
-
-
-</head><body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
-
+</head>
+<!-- BODY -->
+<body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
 <header><div class="header-content">
 <!-- LOGO -->
 <h1 id="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a></h1>
-<!-- MENU -->
+<!-- BUTTON -->
 <nav class="navigation">
 <button class="menu-button"
         aria-controls="menu-list"
@@ -53,23 +25,21 @@ snippets,vorlagen,lernen,verstehen,
   <span class="hidden-menu">Menu</span>
   <div class="menu-icon" aria-hidden="true"></div>
 </button>
-
+<!-- MENU -->
 <ul data-state="closed" class="menu-list" id="menu-list">
-<li><a href="https://www.jumi.biz/Content.htm"><i class="list-icon">
-<img src="https://www.jumi.biz/assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://www.jumi.biz/Links.htm"><i class="list-icon">
-<img src="https://www.jumi.biz/assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://www.jumi.biz/Cheats.htm"><i class="list-icon">
-<img src="https://www.jumi.biz/assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
+<li><a href="Content.htm"><i class="list-icon">
+<img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
+<li><a href="Links.htm"><i class="list-icon">
+<img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
+<li><a href="Cheats.htm"><i class="list-icon">
+<img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
 <li><a href="https://www.jumi.biz"><i class="list-icon">
-<img src="https://www.jumi.biz/assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span>wtf is jumi?</span></a></li>
+<img src="assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span>wtf is jumi?</span></a></li>
 </ul></nav></div></header><main>
-
 <!-- MAIN -->
 <div class="grid-container">
-<article id="Grid-Area-1" class="content flow">
-
-<!-- print("hello world")  -->
+<article id="area-1" class="content flow">
+<!-- HELLO WORLD -->
 <h2>print("hello world") </h2>
     <p>Diese Website ist im Aufbau</p>
 	<ul style="font-size:small;">
@@ -79,78 +49,55 @@ snippets,vorlagen,lernen,verstehen,
 	<li>[2023-03]: Designentwicklung</li>
 	<li>[2023-08]: Github-Anbindung</li>
 	<li>[2023-10]: Integration</li></ul>
-
-<!-- WTF is Jumi.biz ? -->
+<!-- WTF -->
 <h3>WTF is Jumi.biz ?</h3>
-	<p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen. </p>
-
-<div class="inside-content flex">
-<div class="in-inside">
+<p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen.</p>
+<!-- ABOUT -->
 <h3><a href="https://www.jumi.biz/Content.htm">
 Themen</a></h3>
-<ul>
-<li>IT-Sicherheit </li>
-<li>IT-Systeme </li>
-<li>Pentesting </li>
-<li>Projektmanagement </li>
-<li>Fachinformatik </li>
-</ul>
-</div>
-<div class="in-inside">
-<h3>Tasten-Navigation </h3>
-    <ol><li> Selektieren: <div class="button-styled-word"><span>TAB</span></div></li><br>
-    <li> Öffnen: <div class="button-styled-word"><span>Enter</span></div></li></ol>
-    <ul><li> Zurück: <div class="button-styled-word"><span>Shift</span></div> + <div class="button-styled-word"><span>TAB</span></div></li></ul>
-</div>
-</div>
+    <p>Linux Windows Cybersecurity Hacking Coding Shell Tools Network-Basics</p>
+<h3>Tasten-Steuerung </h3>
+    <p class="button-styled">Auswahl: <span>TAB</span> / <span>Shift</span>+<span>TAB</span><br>
+    Öffnen: <span>Enter</span></p>
 </article>
-<article id="Grid-Area-2" class="content flow">
-
-<!-- $ whoami -->
+<article id="area-2" class="content flow">
 <h2>&#36; whoami</h2>
-
 <div class="flex">
-
+<!-- PICTURE -->
 <img id="modalTrigger02" src="assets/img/profile-img-2.png"
 alt="Picture shows shoe">
 <dialog id="openModal02">
 <img src="assets/img/modal/profile-img-modal-02.png" alt="Image-Modal" id="imgModal02">
 <h2>Local Area</h2>
 <button id="closeModal02"> &times; </button></dialog>
-
+<!-- PICTURE -->
 <img id="modalTrigger01" src="assets/img/profile-img-1.png"
 alt="Picture shows Jumi">
 <dialog id="openModal01">
 <img src="assets/img/modal/profile-img-modal-01.png" alt="Image-Modal" id="imgModal01">
 <h2>Human Interface</h2>
 <button id="closeModal01"> &times; </button></dialog>
-
+<!-- PICTURE -->
 <img id="modalTrigger03" src="assets/img/profile-img-3.png"
 alt="Picture shows computer">
 <dialog id="openModal03">
 <img src="assets/img/modal/profile-img-modal-03.png" alt="Image-Modal" id="imgModal03">
 <h2>Central Processing</h2>
-<button id="closeModal03"> &times; </button></dialog>
-
-</div>
-<!--fix this br there
---> <br><p>Mir macht es&nbsp;Spass, mich&nbsp;mit IT zu beschäftigen und
+<button id="closeModal03"> &times; </button></dialog></div>
+<!-- PERSON -->
+    <br><p>Mir macht es&nbsp;Spass, mich&nbsp;mit IT zu beschäftigen und
     Texte für lernzwecke zu minimalisieren. Die&nbsp;Quellen meiner Textinhalte sind öffentliche Personen mit großer Reichweite oder private Weiterbildungen.<br><br>
     <span class="zitat">"<i>Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske</i>" <br><br>-V wie Vendetta (2005)</span></p>
-
 </article>
-<article id="Grid-Area-3" class="content flow">
-
-<!-- Dark Mode Only -->
+<article id="area-3" class="content flow">
+<!-- STUFF -->
 <h2>Dark Mode Only</h2>
     <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die&nbsp;Augen.
     Wenn&nbsp;du den hellen Modus immer noch bevorzugst dann&nbsp;GTFO!<br><br>
     <span class="zitat">"<i>Come to the Dark Side</i>" <br>-Darth Vader</span></p>
-
 </article>
-<article id="Grid-Area-4" class="content flow">
-
-<!-- IT ~ Kung Fu -->
+<article id="area-4" class="content flow">
+<!-- STUFF -->
 <h2>IT &#126; Kung Fu</h2>
     <p>Der chinesische Begriff "Kung Fu" bezieht sich auf Fähigkeiten und&nbsp;Techniken,
     die&nbsp;durch lange, harte Übung und Geduld erlangt&nbsp;werden.
@@ -160,20 +107,21 @@ alt="Picture shows computer">
     Kung&nbsp;Fu beherrschen verlangt Reaktionsfähigkeit,&nbsp;
     bei&nbsp;Informationen entscheidet analytisches und logisches&nbsp;Denken.<br><br>
     <span class="zitat">"<i>Der Meister erscheint wenn der Schüler bereit ist</i>" <br>-Karate Tiger (1986)</span></p>
-
 </article>
-<article id="Grid-Area-5" class="content flow">
-
-<!-- Shownotes -->
+<article id="area-5" class="content flow">
+<!-- LINKS -->
 <h3>Shownotes</h3>
-<ul><li>Kommasetzungs-KI: <a href="https://komma.ai/#" target="_blank">komma.ai</a></li>
-<li>Suchmaschinen-KI: <a href="https://you.com" target="_blank">you.com</a></li>
-<li>HTML-Checker: <a href="https://validator.w3.org/" target="_blank">validator.w3.org</a></li>
-<li>CSS-Checker: <a href="https://jigsaw.w3.org/css-validator/" target="_blank">jigsaw.w3.org/css-validator</a></li></ul>
-
+    <ul><li>Kommasetzungs-KI: <a href="https://komma.ai/#" target="_blank">komma.ai</a></li>
+    <li>Suchmaschinen-KI: <a href="https://you.com" target="_blank">you.com</a></li>
+    <li>HTML-Checker: <a href="https://validator.w3.org/" target="_blank">validator.w3.org</a></li>
+    <li>CSS-Checker: <a href="https://jigsaw.w3.org/css-validator/" target="_blank">jigsaw.w3.org/css-validator</a></li><ul>
 </article></div></main>
 
-<!-- HTML-Analyzer Debugging
+<!-- ### Debugger (-option)
+    <meta http-equiv="refresh" content="6">
+    <style>* {border: 1px dotted #00B140;}</style>-->
+
+<!-- ### Analyzer (-option)
     <h1>HTML-Analyzer</h1>
     <div id="analyzer" class="flex">
     <h3>Tags:</h3>
@@ -181,40 +129,24 @@ alt="Picture shows computer">
     <h3>Classes:</h3>
     <ul id="classList"></ul>
     <h3>IDs:</h3>
-    <ul id="idList"></ul>
-    </div>
+    <ul id="idList"></ul></div>
     <script src="assets/js/html-analyzer.js"></script>-->
 
-<!-- IMPRESSUM -->
 <footer><div class="footer-container">
 <div class="leftside-profil-icons">
-<!-- github.com/xuser123 -->
+<!-- GITHUB -->
 <a id="github-link" href="https://www.github.com/xuser123" target="_blank">
 <img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>
-<!-- instagram.com/jumicontent -->
+<!-- INSTAGRAM -->
 <a id="instagram-link" href="https://www.instagram.com/jumicontent" target="_blank">
 <img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></div>
-<!-- contact@jumi.biz -->
+<!-- EMAIL -->
 <span id="contact-email">contact&#64;jumi.biz</span>
 <div class="rightside-site-features">
-<!-- Zum Seitenanfang -Feature -->
+<!-- GO TOP -->
 <a id="goto-top" href="#"><img src="assets/img/ico/go-top.ico" alt="Zum Seitenanfang"></a>
 </div></div></footer>
-
-<!-- JavaScricpt -->
+<!-- SCRIPTS -->
 <script src="assets/js/menu.js"></script>
 <script src="assets/js/modal.js"></script>
-
-<!-- Debuger (falls nötig)
-    <meta http-equiv="refresh" content="6">
-    <style>* {border: 1px dotted #00B140;}</style>-->
-
-<!-- Export -Feature
-<span class="flex siteFeatures"><a id="exportIcon">
-<img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
-<script src="assets/js/jspdf.umd.min.js">
-#https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js</script>-->
-<!-- for Easteregg Project:
-<script src="assets/js/read.js"></script>-->
-
 </body></html>
