--- a/index.html
+++ b/index.html
@@ -85,38 +85,34 @@ alt="Picture shows computer">
 <h2>Central Processing</h2>
 <button id="closeModal03"> &times; </button></dialog></div>
 <!-- PERSON -->
-    <br><p>Mir macht es&nbsp;Spass, mich&nbsp;mit IT zu beschäftigen und
-    Texte für lernzwecke zu minimalisieren. Die&nbsp;Quellen meiner Textinhalte sind öffentliche Personen mit großer Reichweite oder private Weiterbildungen.<br><br>
-    <span class="zitat">"<i>Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske</i>" <br><br>-V wie Vendetta (2005)</span></p>
+    <br><p>Mir macht es Spass, mich mit IT zu beschäftigen und Texte für lernzwecke zu minimalisieren. Die Quellen meiner Textinhalte sind öffentliche Personen mit großer Reichweite oder private Weiterbildungen.<br><br>
+    <span class="zitat">"<i>Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske</i>"<br><br>- V wie Vendetta (2005)</span></p>
 </article>
 <article id="area-3" class="content flow">
 <!-- STUFF -->
 <h2>Dark Mode Only</h2>
     <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die&nbsp;Augen.
     Wenn&nbsp;du den hellen Modus immer noch bevorzugst dann&nbsp;GTFO!<br><br>
-    <span class="zitat">"<i>Come to the Dark Side</i>" <br>-Darth Vader</span></p>
+    <span class="zitat">"<i>Come with me. It is the only way.</i>"<br><br>- Darth Vader</span></p>
 </article>
 <article id="area-4" class="content flow">
 <!-- STUFF -->
 <h2>IT &#126; Kung Fu</h2>
-    <p>Der chinesische Begriff "Kung Fu" bezieht sich auf Fähigkeiten und&nbsp;Techniken,
+    <p>Der chinesische Begriff "Kung&nbsp;Fu" bezieht sich auf Fähigkeiten und&nbsp;Techniken,
     die&nbsp;durch lange, harte Übung und Geduld erlangt&nbsp;werden.
-    Eine&nbsp;Disziplin, die zur Meisterung viel Engagement und Einsatz&nbsp;erfordert.
+    Es&nbsp;ist eine Disziplin, die zur Meisterung viel Engagement und Einsatz&nbsp;erfordert.
     Kung&nbsp;Fu kombiniert Bewegungen und&nbsp;Strategien,
-    während&nbsp;Informations-Technologie Daten verarbeitet und&nbsp;speichert.
-    Kung&nbsp;Fu beherrschen verlangt Reaktionsfähigkeit,&nbsp;
-    bei&nbsp;Informationen entscheidet analytisches und logisches&nbsp;Denken.<br><br>
-    <span class="zitat">"<i>Der Meister erscheint wenn der Schüler bereit ist</i>" <br>-Karate Tiger (1986)</span></p>
+    während&nbsp;die Informations-Technologie Daten verarbeitet und&nbsp;speichert.
+    Das&nbsp;Beherrschen von Kung&nbsp;Fu erfordert&nbsp;Reaktionsfähigkeit,
+    während&nbsp;bei der Verarbeitung von Informationen analytisches und logisches Denken entscheidend&nbsp;ist.
+    In&nbsp;der IT, wie im Kung&nbsp;Fu, liegt die Meisterschaft in der Hingabe und dem Streben nach&nbsp;Exzellenz. <br><br>
+    <span class="zitat">"<i>Der Meister erscheint wenn der Schüler bereit ist</i>"<br><br>- Karate Tiger (1986)</span></p>
 </article>
 <article id="area-5" class="content flow">
-<!-- LINKS -->
-<h3>Shownotes</h3>
-    <ul><li>Kommasetzungs-KI: <a href="https://komma.ai/#" target="_blank">komma.ai</a></li>
-    <li>Suchmaschinen-KI: <a href="https://you.com" target="_blank">you.com</a></li>
-    <li>HTML-Checker: <a href="https://validator.w3.org/" target="_blank">validator.w3.org</a></li>
-    <li>CSS-Checker: <a href="https://jigsaw.w3.org/css-validator/" target="_blank">jigsaw.w3.org/css-validator</a></li><ul>
+<h2>Nikola Tesla</h2>
+<p><span class="zitat">"<i>Die Wissenschaft ist&nbsp;bestrebt, die&nbsp;Welt um uns herum zu&nbsp;verstehen. Die&nbsp;Technologie hingegen strebt danach, sie zu&nbsp;beherrschen.</i>" <br>- Nikola Tesla</span></p>
 </article></div></main>
-
+ŝ
 <!-- ### Debugger (-option)
     <meta http-equiv="refresh" content="6">
     <style>* {border: 1px dotted #00B140;}</style>-->
