zitate bearbeitet und so

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ alt="Picture shows computer">
 <dialog id="openModal03">
 <img src="assets/img/modal/profile-img-modal-03.png" alt="Image-Modal" id="imgModal03">
 <h2>Central Processing</h2>
-<button id="closeModal03"> &times; </button></dialog></div>
+<button id="closeModal03"> &times; </button></dialog></div><br>
 <!-- PERSON -->
-    <br><p>Mir macht es Spass, mich mit IT zu beschäftigen und Texte für lernzwecke zu minimalisieren. Die Quellen meiner Textinhalte sind öffentliche Personen mit großer Reichweite oder private Weiterbildungen.<br><br>
+    <p>Mir macht es Spass, mich mit IT zu beschäftigen und Texte für lernzwecke zu minimalisieren. Die Quellen meiner Textinhalte sind öffentliche Personen mit großer Reichweite oder private Weiterbildungen.<br><br>
     <span class="zitat">"<i>Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske</i>"<br><br>- V wie Vendetta (2005)</span></p>
 </article>
 <article id="area-3" class="content flow">
