big cleanup, way to late but done

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
 <header><div class="header-content">
 <!-- LOGO -->
 <span id="jumi-logo"><img src="assets/img/ico/jumi.ico"></span>
-<span id="jumi-biz"><a href="https://www.jumi.biz">jumi.biz</a></span>
+<a href="https://www.jumi.biz"><span id="jumi-biz">jumi.biz</span></a>
 <!-- BUTTON -->
 <nav class="navigation">
 <button class="menu-button"
@@ -60,25 +60,42 @@ body {
 <div class="grid-container">
 <article id="area-1" class="content flow">
 <!-- HELLO WORLD -->
-<h2>print("hello world") </h2>
-    <p>Diese Website ist im Aufbau</p>
+
+<blockquote><h3>print("hello world") </h3>
+Diese Website ist im Aufbau</blockquote>
 	<ul style="font-size:small;">
-	<li>[2019-06]: Domain gemietet</li>
-	<li>[2020/21]: Konzeptentwicklung</li>
-	<li>[2022-11]: Ausarbeitung</li>
-	<li>[2023-03]: Designentwicklung</li>
-	<li>[2023-08]: Github-Anbindung</li>
-	<li>[2023-10]: Integration</li></ul>
+	<li>[2019-06] Domain gemietet</li>
+	<li>[2020/21] Konzeptentwicklung</li>
+	<li>[2022-11] Ausarbeitung</li>
+	<li>[2023-03] Designentwicklung</li>
+	<li>[2023-08] Github-Anbindung</li>
+	<li>[2023-10] Integration</li></ul>
 <!-- WTF -->
-<h3>WTF is Jumi.biz ?</h3>
-<p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen.</p>
+
+<blockquote><h3>WTF is Jumi.biz ?</h3>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen.</blockquote>
 <!-- ABOUT -->
-<h3><a href="https://www.jumi.biz/Content.htm">
-Themen</a></h3>
-    <p>Linux Windows Cybersecurity Hacking Coding Shell Tools Network-Basics</p>
-<h3>Tasten-Steuerung </h3>
-    <p class="button-styled">Auswahl: <span>TAB</span> / <span>Shift</span>+<span>TAB</span><br>
-    Öffnen: <span>Enter</span></p>
+
+    <blockquote><h3><a href="https://www.jumi.biz/Content.htm">
+Themen:</a></h3>Linux Windows Cybersecurity Hacking Coding Shell Tools Network-Basics</blockquote>
+    <h4>Tasten-Steuerung</h4>
+<table id="tasten-steuerung">
+    <thead>
+        <tr>
+        <th>Vollbild</th>
+        <th>Zurück</th>
+        <th>Weiter</th>
+        <th>Öffnen</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr class="button-styled">
+        <td><span>F11</span></td>
+        <td><span>Shift</span> &#43; <span>TAB</span></td>
+        <td><span>TAB</span></td>
+        <td><span>Enter</span></td>
+        </tr>
+    </tbody>
+</table>
 </article>
 <article id="area-2" class="content flow">
 <h2>&#36; whoami</h2>
@@ -87,37 +104,38 @@ Themen</a></h3>
 <img id="modalTrigger01" src="assets/img/profile-img-1.png"
 alt="Picture shows Jumi">
 <dialog id="openModal01">
-<img src="assets/img/modal/profile-img-modal-01.png" alt="Image-Modal" id="imgModal01">
-<h2>Human Interface</h2>
-<button id="closeModal01"> &times; </button></dialog>
+<figure><img src="assets/img/modal/profile-img-modal-01.png" alt="Image-Modal" id="imgModal01"><figcaption>
+<h2>Human Interface</h2></figcaption>
+<button id="closeModal01"> &times; </button></figure></dialog>
 <!-- PICTURE -->
 <img id="modalTrigger02" src="assets/img/profile-img-2.png"
 alt="Picture shows shoe">
 <dialog id="openModal02">
-<img src="assets/img/modal/profile-img-modal-02.png" alt="Image-Modal" id="imgModal02">
-<h2>Local Area</h2>
-<button id="closeModal02"> &times; </button></dialog>
+<figure><img src="assets/img/modal/profile-img-modal-02.png" alt="Image-Modal" id="imgModal02"><figcaption>
+<h2>Local Area</h2></figcaption>
+<button id="closeModal02"> &times; </button></figure></dialog>
 <!-- PICTURE -->
 <img id="modalTrigger03" src="assets/img/profile-img-3.png"
 alt="Picture shows computer">
 <dialog id="openModal03">
-<img src="assets/img/modal/profile-img-modal-03.png" alt="Image-Modal" id="imgModal03">
-<h2>Central Processing</h2>
-<button id="closeModal03"> &times; </button></dialog></div><br>
+<figure><img src="assets/img/modal/profile-img-modal-03.png" alt="Image-Modal" id="imgModal03"><figcaption>
+<h2>Central Processing</h2></figcaption>
+<button id="closeModal03"> &times; </button></figure></dialog></div><br>
 <!-- PERSON -->
-    <p>Mir macht es Spass, mich mit IT zu beschäftigen und Texte für lernzwecke zu minimalisieren. Die Quellen meiner Textinhalte sind öffentliche Personen mit großer Reichweite oder private Weiterbildungen.<br><br>
-    <span class="zitat">"<i>Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske</i>"<br><br>- V wie Vendetta (2005)</span></p>
+    <p>Mir macht es Spass, mich mit IT zu beschäftigen und Texte für Lernzwecke zu minimalisieren. Die Quellen meiner Textinhalte sind öffentliche Personen mit großer Reichweite oder private Weiterbildungen.</p>
+    <q>Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske.</q><figcaption><cite>- V wie Vendetta</cite> (2005)</figcaption>
 </article>
 <article id="area-3" class="content flow">
 <!-- STUFF -->
-<h2>Dark Mode Only</h2>
+<h4>Dark Mode Only</h4>
     <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die&nbsp;Augen.
-    Wenn&nbsp;du den hellen Modus immer noch bevorzugst dann&nbsp;GTFO!<br><br>
-    <span class="zitat">"<i>Come with me. It is the only way.</i>"<br><br>- Darth Vader</span></p>
+    Wenn&nbsp;du den hellen Modus immer noch bevorzugst dann&nbsp;GTFO!</p>
+    <q>Come with me. It is the only way.</q><figcaption>
+    <cite>- Star Wars: Episode V</cite> (1980)</figcaption>
 </article>
 <article id="area-4" class="content flow">
 <!-- STUFF -->
-<h2>IT &#126; Kung Fu</h2>
+<h3>IT &#126; Kung Fu</h3>
     <p>Der chinesische Begriff "Kung&nbsp;Fu" bezieht sich auf Fähigkeiten und&nbsp;Techniken,
     die&nbsp;durch lange, harte Übung und Geduld erlangt&nbsp;werden.
     Es&nbsp;ist eine Disziplin, die zur Meisterung viel Engagement und Einsatz&nbsp;erfordert.
@@ -125,12 +143,18 @@ alt="Picture shows computer">
     während&nbsp;die Informations-Technologie Daten verarbeitet und&nbsp;speichert.
     Das&nbsp;Beherrschen von Kung&nbsp;Fu erfordert&nbsp;Reaktionsfähigkeit,
     während&nbsp;bei der Verarbeitung von Informationen analytisches und logisches Denken entscheidend&nbsp;ist.
-    In&nbsp;der IT, wie im Kung&nbsp;Fu, liegt die Meisterschaft in der Hingabe und dem Streben nach&nbsp;Exzellenz. <br><br>
-    <span class="zitat">"<i>Der Meister erscheint wenn der Schüler bereit ist</i>"<br><br>- Karate Tiger (1986)</span></p>
+    In&nbsp;der IT, wie im Kung&nbsp;Fu, liegt die Meisterschaft in der Hingabe und dem Streben nach&nbsp;Exzellenz.</p>
+    <q>Der Meister erscheint wenn der Schüler bereit ist.</q>
+    <figcaption><cite>- Karate Tiger</cite> (1986)</figcaption>
 </article>
 <article id="area-5" class="content flow">
-<h2>Nikola Tesla</h2>
-<p><span class="zitat">"<i>Die Wissenschaft ist&nbsp;bestrebt, die&nbsp;Welt um uns herum zu&nbsp;verstehen. Die&nbsp;Technologie hingegen strebt danach, sie zu&nbsp;beherrschen.</i>" <br><br>- Nikola Tesla</span></p>
+<h2>Quiz-Raum 3327</h2>
+<details class="flow">
+<summary>&nbsp;I have keys but no doors. I have space but no room.<br>&nbsp;&nbsp;&nbsp;You can enter but can’t leave. What am I?</summary>
+<br><h1>A keyboard.</h1>
+</details>
+<q>Die Wissenschaft ist&nbsp;bestrebt, die&nbsp;Welt um uns herum zu&nbsp;verstehen. Die&nbsp;Technologie hingegen strebt danach, sie zu&nbsp;beherrschen.</q>
+<figcaption><cite>- Nikola Tesla</cite> (1856-1943)</figcaption>
 </article></div></main>
 
 <!-- ### Debugger: Auto-Refresh Page (-option)
