--- a/Content.htm
+++ b/Content.htm
@@ -1,52 +1,60 @@
 <!DOCTYPE html><html lang="de"><head>
-<!-- Zeichenkodierung --><meta charset="utf-8">
-<!-- Optimierung für Mobilgeräte --><meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- HTTP-Header --><meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!-- Metadaten -->
-<meta name="description" content="
-Sammlung von Themen über Informatik, kompakt.
-"><meta name="keywords" content="
-linux,windows,sicherheit,hacking,
-administration,code,shell,terminal,syntax,
-tool,programm,it,informatik,information,
-technologie,fachinformatik,computer,pc,
-system,netzwerk,integration,programmierung
-snippets,vorlagen,lernen,verstehen,
-"><meta name="author" content="Jumi">
-<!-- Favicon --><link rel="icon" href="assets/img/ico/jumi.ico">
-<!-- Sheets -->
-<link rel="stylesheet" href="assets/css/style.css">
-<link rel="stylesheet" href="assets/css/main.css">
-<link rel="stylesheet" href="assets/css/media-queries.css">
-<link rel="stylesheet" href="assets/css/menu.css">
-<link rel="stylesheet" href="assets/css/animations.css">
-<link rel="stylesheet" href="assets/css/modal.css">
-
-<title>j|Content</title>
-</head><body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
-
+<!-- ENCODE --><meta charset="utf-8">
+<!-- OPTIMIZE --><meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- SUPPORT --><meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!-- INFO -->
+<meta name="description" content="Sammlung von Themen über Informatik, kompakt.">
+<meta name="keywords" content="linux,windows,cybersecurity,hacking,coding,shell,tools,network,basics">
+<meta name="author" content="Jumi">
+<!-- FAVICON --><link rel="icon" href="assets/img/ico/jumi.ico">
+<!-- TITLE --><title>jumi.biz</title>
+<!-- CSS -->
+<link rel="stylesheet" type="text/css" href="assets/css/basic.css">
+<link rel="stylesheet" type="text/css" href="assets/css/layout.css">
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<style>
+:root { /* Farben */
+	--vader-black: #131313;
+	--pipi-white: #ebebd3;
+	--matrix-green: #8dd88e;
+	--neon-blue: #00f0f0;
+	--neon-pink: #ffbfea;
+}
+html {background-color: var(--vader-black);}
+body {
+    position: relative;/* Footer-Einfluss */
+    height: 100%;/* Footer-Einfluss */
+    min-width:100%;
+    margin: 0;padding: 0;
+    text-rendering: optimizeSpeed;
+}
+*,*::before,*::after {box-sizing: border-box;}
+</style>
+</head>
+<!-- BODY -->
+<body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
 <header><div class="header-content">
 <!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://www.jumi.biz">jumi.biz</a>&#32;</h1>
-<!-- MENU -->
-<nav class="menu">
-<button class="menu-toggle"
-        aria-controls="primary-navigation"
+<span id="jumi-logo"><img src="assets/img/ico/jumi.ico"></span>
+<a href="https://www.jumi.biz"><span id="jumi-biz">jumi.biz</span></a>
+<!-- BUTTON -->
+<nav class="navigation">
+<button class="menu-button"
+        aria-controls="menu-list"
         aria-expanded="false">
-  <span class="visually-hidden">Menu</span>
-  <div class="hamburger" aria-hidden="true"></div>
-</button>
-
-<ul id="primary-navigation" data-state="closed" class="primary-navigation">
-<li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
-<img src="https://www.jumi.biz/assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://www.jumi.biz/Links.htm"><i class="menu-icon">
-<img src="https://www.jumi.biz/assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://www.jumi.biz/Cheats.htm"><i class="menu-icon">
-<img src="https://www.jumi.biz/assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
-<li><a href="https://www.jumi.biz"><i class="menu-icon">
-<img src="https://www.jumi.biz/assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i>
-<span id="wtf-is-jumi">wtf is jumi?</span></a></li>
+  <span class="hidden-menu">Menu</span>
+  <div class="menu-icon" aria-hidden="true"></div>
+</button></div><div class="header-text"><span><!-- .header-text --></span>
+<!-- MENU -->
+<ul data-state="closed" class="menu-list">
+<li><a href="Content.htm"><i class="list-icon">
+<img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
+<li><a href="Links.htm"><i class="list-icon">
+<img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
+<li><a href="Cheats.htm"><i class="list-icon">
+<img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
+<li><a href="https://www.jumi.biz"><i class="list-icon">
+<img src="assets/img/ico/jumi.ico" alt="WTF is jumi?"></i>wtf is jumi?</a></li>
 </ul></nav></div></header><main>
 
 <div class="grid-container">
@@ -56,33 +64,33 @@ snippets,vorlagen,lernen,verstehen,
     <div class="in-inside">
       <ul>
         <h3>Standards </h3>
-        <li><b><a href="https://www.jumi.biz/pages/Schutzziele.htm">Ziele und Sicherheiten </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/ISO-2700x.htm">ISO/IEC 2700x-Familie </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/BSI-200-1.htm">BSI-Standard 200-1 </a></b></li>
+        <li><b><a href="pages/Schutzziele.htm">Ziele und Sicherheiten </a></b></li>
+        <li><b><a href="pages/ISO-2700x.htm">ISO/IEC 2700x-Familie </a></b></li>
+        <li><b><a href="pages/BSI-200-1.htm">BSI-Standard 200-1 </a></b></li>
         <h3>IT-Grundschutz </h3>
-        <li><b><a href="https://www.jumi.biz/pages/Elementare_Gefährdungen.htm">Elementare Gefährdungen </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Prozess_Bausteine.htm">Prozess Bausteine </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/System_Bausteine.htm">System Bausteine </a></b></li>
+        <li><b><a href="pages/Elementare_Gefährdungen.htm">Elementare Gefährdungen </a></b></li>
+        <li><b><a href="pages/Prozess_Bausteine.htm">Prozess Bausteine </a></b></li>
+        <li><b><a href="pages/System_Bausteine.htm">System Bausteine </a></b></li>
         <h3>Datensicherheit </h3>
-        <li><b><a href="https://www.jumi.biz/pages/Datenschutz.htm">Datenschutz </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/organisatorische_Maßnahmen.htm">organisatorische Maßnahmen </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/technisch_Maßnahmen.htm">technisch Maßnahmen </a></b></li>
+        <li><b><a href="pages/Datenschutz.htm">Datenschutz </a></b></li>
+        <li><b><a href="pages/organisatorische_Maßnahmen.htm">organisatorische Maßnahmen </a></b></li>
+        <li><b><a href="pages/technisch_Maßnahmen.htm">technisch Maßnahmen </a></b></li>
       </ul>
     </div>
     <div class="in-inside">
       <ul>
         <h3>BSI-Kritis-Gesetze </h3>
-        <li><b><a href="https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">Kritische Infrastrukturen </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">Standards und Anwendungen </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">Angriffspunkte </a></b></li>
+        <li><b><a href="pages/Kritische_Infrastrukturen.htm">Kritische Infrastrukturen </a></b></li>
+        <li><b><a href="pages/Kritische_Infrastrukturen.htm">Standards und Anwendungen </a></b></li>
+        <li><b><a href="pages/Kritische_Infrastrukturen.htm">Angriffspunkte </a></b></li>
         <h3>### </h3>
-        <li><b><a href="pages/https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">###</a></b></li>
-        <li><b><a href="pages/https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">###</a></b></li>
-        <li><b><a href="pages/https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">###</a></b></li>
+        <li><b><a href="pages/pages/Kritische_Infrastrukturen.htm">###</a></b></li>
+        <li><b><a href="pages/pages/Kritische_Infrastrukturen.htm">###</a></b></li>
+        <li><b><a href="pages/pages/Kritische_Infrastrukturen.htm">###</a></b></li>
         <h3>Zusammenfassung </h3>
-        <li><b><a href="https://www.jumi.biz/pages/IT-Sicherheit.htm">IT-Sicherheit </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Kritische_Infrastrukturen.htm">Kritische Infrastrukturen </a></b></li>
-        <li><b><a href="https://www.jumi.biz/Content.htm">###</a></b></li>
+        <li><b><a href="pages/IT-Sicherheit.htm">IT-Sicherheit </a></b></li>
+        <li><b><a href="pages/Kritische_Infrastrukturen.htm">Kritische Infrastrukturen </a></b></li>
+        <li><b><a href="Content.htm">###</a></b></li>
       </ul>
     </div>
   </div>
@@ -167,33 +175,33 @@ snippets,vorlagen,lernen,verstehen,
     <div class="in-inside">
       <ul>
         <h3>Initierung und Planung </h3>
-        <li><b><a href="https://www.jumi.biz/pages/Projektmanagement.htm">Definierung </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Projektmanagement.htm">Planung </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Projektmanagement.htm">Aufgaben und Pflichten </a></b></li>
+        <li><b><a href="pages/Projektmanagement.htm">Definierung </a></b></li>
+        <li><b><a href="pages/Projektmanagement.htm">Planung </a></b></li>
+        <li><b><a href="pages/Projektmanagement.htm">Aufgaben und Pflichten </a></b></li>
         <h3>Methoden und Anwendung </h3>
-        <li><b><a href="https://www.jumi.biz/pages/Projektmanagement.htm"></a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Projektmanagement.htm">###</a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Projektmanagement.htm">###</a></b></li>
+        <li><b><a href="pages/Projektmanagement.htm"></a></b></li>
+        <li><b><a href="pages/Projektmanagement.htm">###</a></b></li>
+        <li><b><a href="pages/Projektmanagement.htm">###</a></b></li>
         <h3>Wirtschaftlichkeit</h3>
-        <li><b><a href="https://www.jumi.biz/pages/Wirtschaftlichkeit.htm">Bedarfsanalyse </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Wirtschaftlichkeit.htm">Nutzwertanalyse </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Wirtschaftlichkeit.htm">Angebotsvergleich </a></b></li>
+        <li><b><a href="pages/Wirtschaftlichkeit.htm">Bedarfsanalyse </a></b></li>
+        <li><b><a href="pages/Wirtschaftlichkeit.htm">Nutzwertanalyse </a></b></li>
+        <li><b><a href="pages/Wirtschaftlichkeit.htm">Angebotsvergleich </a></b></li>
       </ul>
     </div>
     <div class="in-inside">
       <ul>
         <h3>Qualitätssicherung </h3>
-        <li><b><a href="https://www.jumi.biz/pages/Qualitaetssicherung.htm">Grundsätze </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Qualitaetssicherung.htm">Anforderungen </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Qualitaetssicherung.htm">Management </a></b></li>
+        <li><b><a href="pages/Qualitaetssicherung.htm">Grundsätze </a></b></li>
+        <li><b><a href="pages/Qualitaetssicherung.htm">Anforderungen </a></b></li>
+        <li><b><a href="pages/Qualitaetssicherung.htm">Management </a></b></li>
         <h3>Marketing </h3>
-        <li><b><a href="https://www.jumi.biz/pages/Marketing.htm">Fachbegriffe </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Marketing.htm">Grundfunktionen </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Marketing.htm">Produktlebebnszyklen</a></b></li>
+        <li><b><a href="pages/Marketing.htm">Fachbegriffe </a></b></li>
+        <li><b><a href="pages/Marketing.htm">Grundfunktionen </a></b></li>
+        <li><b><a href="pages/Marketing.htm">Produktlebebnszyklen</a></b></li>
         <h3>Zusammenfassung </h3>
-        <li><b><a href="https://www.jumi.biz/pages/Projektmanagement.htm">Projektmanagement </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Qualitaetssicherung.htm">Qualitätsicherung </a></b></li>
-        <li><b><a href="https://www.jumi.biz/pages/Marketing.htm">Marketing </a></b></li>
+        <li><b><a href="pages/Projektmanagement.htm">Projektmanagement </a></b></li>
+        <li><b><a href="pages/Qualitaetssicherung.htm">Qualitätsicherung </a></b></li>
+        <li><b><a href="pages/Marketing.htm">Marketing </a></b></li>
       </ul>
     </div>
   </div>
@@ -236,49 +244,35 @@ snippets,vorlagen,lernen,verstehen,
     </div>
   </div>
 </article></div></main>
+<!-- ### Debugger: Auto-Refresh Page (-option)
+    <meta http-equiv="refresh" content="5">-->
+<!-- ### Debugger: Show Borders (-option)
+    <style>* {border: 1px dotted #00B140;}</style>-->
+<!-- ### Debugger: HTML-Analyzer JavaScript (-option)
+    <div id="analyzer" class="flex" style="background-color:#000000;color:#8dd88e"><h2>HTML-Analyzer</h2>
+    <h3>Tags:</h3><ul id="tagList"></ul>
+    <h3>Classes:</h3><ul id="classList"></ul>
+    <h3>IDs:</h3><ul id="idList"></ul></div>
+    <script src="assets/js/html-analyzer.js"></script>-->
 
-<!-- HTML-Analyzer Debugging
-    <h1>HTML-Analyzer</h1>
-    <div id="analyzer" class="flex">
-    <h3>Tags:</h3>
-    <ul id="tagList"></ul>
-    <h3>Classes:</h3>
-    <ul id="classList"></ul>
-    <h3>IDs:</h3>
-    <ul id="idList"></ul>
-    </div>
-    <script src="assets/js/html-analyzer.js"></script> -->
-
-<!-- IMPRESSUM -->
 <footer><div class="footer-container">
 <div class="leftside-profil-icons">
-<!-- github.com/xuser123 -->
+<!-- GITHUB -->
 <a id="github-link" href="https://www.github.com/xuser123" target="_blank">
-<img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;
-<!-- instagram.com/jumicontent -->
+<img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>
+<!-- INSTAGRAM -->
 <a id="instagram-link" href="https://www.instagram.com/jumicontent" target="_blank">
 <img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></div>
-<!-- contact@jumi.biz -->
+<!-- EMAIL -->
 <span id="contact-email">contact&#64;jumi.biz</span>
 <div class="rightside-site-features">
-<!-- Zum Seitenanfang -Feature -->
-<a id="goto-top" href="#"><img src="assets/img/ico/go-top.ico" alt="Zum Seitenanfang"></a>
-</div></div></footer>
-
-<!-- JavaScricpt -->
+<!-- EXPORT PDF -->
+<a id="export-icon" href="#">
+<img src="assets/img/ico/export-pdf.ico" alt="Download as PDF"></a>
+<!-- GO TOP -->
+<a id="goto-top" href="#">
+<img src="assets/img/ico/go-top.ico" alt="Zum Seitenanfang"></a></div></div></footer>
+<!-- SCRIPTS -->
 <script src="assets/js/menu.js"></script>
 <script src="assets/js/modal.js"></script>
-
-<!-- Debuger (falls nötig)-->
-    <meta http-equiv="refresh" content="6">
-    <style>* {border: 1px dotted #00B140;}</style>
-
-<!-- Export -Feature
-<span class="flex siteFeatures"><a id="exportIcon">
-<img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;
-<script src="assets/js/jspdf.umd.min.js">
-#https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js</script>-->
-<!-- for Easteregg Project:
-<script src="assets/js/read.js"></script>-->
-
 </body></html>
