--- a/500.html
+++ b/500.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="linux,windows,cybersecurity,hacking,coding,shell,tools,network,basics">
 <meta name="author" content="Jumi">
 <!-- FAVICON --><link rel="icon" href="assets/img/ico/jumi.ico">
-<!-- TITLE --><title>jumi|404</title>
+<!-- TITLE --><title>jumi|500</title>
 
 <link rel="stylesheet" type="text/css" href="assets/css/basic.css">
 <link rel="stylesheet" type="text/css" href="assets/css/layout.css">
@@ -45,7 +45,7 @@ body {
         aria-expanded="false">
   <span class="hidden-menu">Menu</span>
   <div class="menu-icon" aria-hidden="true"></div>
-</button></div><div class="header-text"><span>ERROR 404</span>
+</button></div><div class="header-text"><span>INTERNAL SERVER ERROR 500</span>
 <!-- MENU -->
 <ul data-state="closed" class="menu-list">
 <li><a href="Content.htm"><i class="list-icon">
@@ -61,11 +61,11 @@ body {
 <!-- MAIN -->
 <div class="grid-container">
 
-<h1>404</h1>
-<h2>Page Not Found </h2>
+<h1>500</h1>
+<h2>Internal Server Error </h2>
 <h2><b>¯\_(ツ)_/¯</b></h2>
-<p>Die Seite ist nicht verfügbar...<br>
-...oder in einem anderen Verzeichnis</p>
+<p>Server konnte Anfrage nicht verarbeiten...<br>
+...oder der Server ist außer Betrieb</p>
 <div class="search-container">
     <form accept-charset="UTF-8" id="search" action="/search" method="get">
     <label for="search">Was suchst du? </label><br><br>
