--- a/index.html
+++ b/index.html
@@ -60,24 +60,25 @@ body {
 <div class="grid-container">
 <article id="area-1" class="content flow">
 <!-- HELLO WORLD -->
-
-<blockquote><h3>print("hello world") </h3>
-Diese Website ist im Aufbau</blockquote>
+<section>
+<h3>print("hello world")</h3>
+    <q>Diese Website ist im Aufbau</q>
 	<ul style="font-size:small;">
 	<li>[2019-06] Domain gemietet</li>
 	<li>[2020/21] Konzeptentwicklung</li>
 	<li>[2022-11] Ausarbeitung</li>
 	<li>[2023-03] Designentwicklung</li>
 	<li>[2023-08] Github-Anbindung</li>
-	<li>[2023-10] Integration</li></ul>
-<!-- WTF -->
-
-<blockquote><h3>WTF is Jumi.biz ?</h3>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen.</blockquote>
-<!-- ABOUT -->
-
-    <blockquote><h3><a href="https://www.jumi.biz/Content.htm">
-Themen:</a></h3>Linux Windows Cybersecurity Hacking Coding Shell Tools Network-Basics</blockquote>
-    <h4>Tasten-Steuerung</h4>
+	<li>[2023-10] Integration</li></ul></section>
+	<!-- WTF -->
+<section>
+<h3>WTF is Jumi.biz ?</h3><p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen.</p>
+<!-- ABOUT --></section>
+<aside>
+<h3><a href="https://www.jumi.biz/Content.htm">
+Themen:</a></h3>Linux Windows Cybersecurity Hacking Coding Shell Tools Network-Basics</aside>
+<section>
+<h4>Tasten-Steuerung</h4>
 <table id="tasten-steuerung">
     <thead>
         <tr>
@@ -95,7 +96,7 @@ Themen:</a></h3>Linux Windows Cybersecurity Hacking Coding Shell Tools Network-B
         <td><span>Enter</span></td>
         </tr>
     </tbody>
-</table>
+</table><section>
 </article>
 <article id="area-2" class="content flow">
 <h2>&#36; whoami</h2>
@@ -136,14 +137,14 @@ alt="Picture shows computer">
 <article id="area-4" class="content flow">
 <!-- STUFF -->
 <h3>IT &#126; Kung Fu</h3>
-    <p>Der chinesische Begriff "Kung&nbsp;Fu" bezieht sich auf Fähigkeiten und&nbsp;Techniken,
+    <blockquote>Der chinesische Begriff "Kung&nbsp;Fu" bezieht sich auf Fähigkeiten und&nbsp;Techniken,
     die&nbsp;durch lange, harte Übung und Geduld erlangt&nbsp;werden.
     Es&nbsp;ist eine Disziplin, die zur Meisterung viel Engagement und Einsatz&nbsp;erfordert.
     Kung&nbsp;Fu kombiniert Bewegungen und&nbsp;Strategien,
     während&nbsp;die Informations-Technologie Daten verarbeitet und&nbsp;speichert.
     Das&nbsp;Beherrschen von Kung&nbsp;Fu erfordert&nbsp;Reaktionsfähigkeit,
     während&nbsp;bei der Verarbeitung von Informationen analytisches und logisches Denken entscheidend&nbsp;ist.
-    In&nbsp;der IT, wie im Kung&nbsp;Fu, liegt die Meisterschaft in der Hingabe und dem Streben nach&nbsp;Exzellenz.</p>
+    In&nbsp;der IT, wie im Kung&nbsp;Fu, liegt die Meisterschaft in der Hingabe und dem Streben nach&nbsp;Exzellenz.</blockquote>
     <q>Der Meister erscheint wenn der Schüler bereit ist.</q>
     <figcaption><cite>- Karate Tiger</cite> (1986)</figcaption>
 </article>
