--- a/pages/IT-Sicherheit.htm
+++ b/pages/IT-Sicherheit.htm
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html><html lang="de"><head>
 <!-- ENCODE --><meta charset="utf-8">
 <!-- OPTIMIZE --><meta name="viewport" content="width=device-width, initial-scale=1">
@@ -62,8 +61,8 @@ body {
 <div class="grid-container">
 <article class="content flow">
 
-<h1 id="bigHL glowtxt">Informationssicherheit</h1>
-<h2>Schutzziele</h2>
+<h1 name="Informationssicherheit">Informationssicherheit</h1>
+<h2 name="Schutzziele">Schutzziele</h2>
 <dl>
 <dt><b>Vertraulichkeit
 </b></dt><dd>Nur autorisierte Zugriffe
