--- a/Content.htm
+++ b/Content.htm
@@ -58,31 +58,31 @@ body {
 </ul></nav></div></header><main>
 
 <div class="grid-container">
-<article id="Grid-Area-1" class="content flow">
-<h1 id="bigHL">Informationssicherheit </h1>
+<article id="area-1" class="content flow">
+<h1>Informationssicherheit </h1>
   <div class="inside-content">
     <div class="in-inside">
       <ul>
         <h3>Standards </h3>
-        <li><b><a href="pages/Schutzziele.htm">Ziele und Sicherheiten </a></b></li>
-        <li><b><a href="pages/ISO-2700x.htm">ISO/IEC 2700x-Familie </a></b></li>
-        <li><b><a href="pages/BSI-200-1.htm">BSI-Standard 200-1 </a></b></li>
+        <li><b><a href="pages/Schutzziele.htm">#Ziele und Sicherheiten </a></b></li>
+        <li><b><a href="pages/ISO-2700x.htm">#ISO/IEC 2700x-Familie </a></b></li>
+        <li><b><a href="pages/BSI-200-1.htm">#BSI-Standard 200-1 </a></b></li>
         <h3>IT-Grundschutz </h3>
-        <li><b><a href="pages/Elementare_Gefährdungen.htm">Elementare Gefährdungen </a></b></li>
-        <li><b><a href="pages/Prozess_Bausteine.htm">Prozess Bausteine </a></b></li>
-        <li><b><a href="pages/System_Bausteine.htm">System Bausteine </a></b></li>
+        <li><b><a href="pages/Elementare_Gefährdungen.htm">#Elementare Gefährdungen </a></b></li>
+        <li><b><a href="pages/Prozess_Bausteine.htm">#Prozess Bausteine </a></b></li>
+        <li><b><a href="pages/System_Bausteine.htm">#System Bausteine </a></b></li>
         <h3>Datensicherheit </h3>
-        <li><b><a href="pages/Datenschutz.htm">Datenschutz </a></b></li>
-        <li><b><a href="pages/organisatorische_Maßnahmen.htm">organisatorische Maßnahmen </a></b></li>
-        <li><b><a href="pages/technisch_Maßnahmen.htm">technisch Maßnahmen </a></b></li>
+        <li><b><a href="pages/Datenschutz.htm">#Datenschutz </a></b></li>
+        <li><b><a href="pages/organisatorische_Maßnahmen.htm">#organisatorische Maßnahmen </a></b></li>
+        <li><b><a href="pages/technisch_Maßnahmen.htm">#technisch Maßnahmen </a></b></li>
       </ul>
     </div>
     <div class="in-inside">
       <ul>
         <h3>BSI-Kritis-Gesetze </h3>
-        <li><b><a href="pages/Kritische_Infrastrukturen.htm">Kritische Infrastrukturen </a></b></li>
-        <li><b><a href="pages/Kritische_Infrastrukturen.htm">Standards und Anwendungen </a></b></li>
-        <li><b><a href="pages/Kritische_Infrastrukturen.htm">Angriffspunkte </a></b></li>
+        <li><b><a href="pages/Kritische_Infrastrukturen.htm">#Kritische Infrastrukturen </a></b></li>
+        <li><b><a href="pages/Kritische_Infrastrukturen.htm">#Standards und Anwendungen </a></b></li>
+        <li><b><a href="pages/Kritische_Infrastrukturen.htm">#Angriffspunkte </a></b></li>
         <h3>### </h3>
         <li><b><a href="pages/pages/Kritische_Infrastrukturen.htm">###</a></b></li>
         <li><b><a href="pages/pages/Kritische_Infrastrukturen.htm">###</a></b></li>
@@ -95,8 +95,8 @@ body {
     </div>
   </div>
 </article>
-<article id="Grid-Area-2" class="content flow">
-<h1 id="bigHL">IT-Systeme </h1>
+<article id="area-2" class="content flow">
+<h1>IT-Systeme </h1>
   <div class="inside-content">
     <div class="in-inside">
       <ul>
@@ -114,7 +114,7 @@ body {
         <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
-    <div id="disabled" class="in-inside">
+    <div style="visibility:hidden;" class="in-inside">
       <ul>
         <h3>### </h3>
         <li><b><a href="pages/###">###</a></b></li>
@@ -132,13 +132,13 @@ body {
     </div>
   </div>
 </article>
-<article id="Grid-Area-3" class="content flow">
-<h1 id="bigHL">Pentesting </h1>
+<article id="area-3" class="content flow">
+<h1>Pentesting </h1>
   <div class="inside-content">
     <div class="in-inside">
       <ul>
         <h3>Informationgathering </h3>
-        <li><b><a href="pages/###">Antivirusprogramme</a></b></li>
+        <li><b><a href="pages/###">#Antivirusprogramme</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <li><b><a href="pages/###">###</a></b></li>
         <h3>Methoden </h3>
@@ -151,7 +151,7 @@ body {
         <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
-    <div id="disabled" class="in-inside">
+    <div style="visibility:hidden;" class="in-inside">
       <ul>
         <h3>### </h3>
         <li><b><a href="pages/###">###</a></b></li>
@@ -169,46 +169,46 @@ body {
     </div>
   </div>
 </article>
-<article id="Grid-Area-4" class="content flow">
-<h1 id="bigHL">Projektmanagement </h1>
+<article id="area-4" class="content flow">
+<h1>Projektmanagement </h1>
   <div class="inside-content">
     <div class="in-inside">
       <ul>
         <h3>Initierung und Planung </h3>
-        <li><b><a href="pages/Projektmanagement.htm">Definierung </a></b></li>
-        <li><b><a href="pages/Projektmanagement.htm">Planung </a></b></li>
-        <li><b><a href="pages/Projektmanagement.htm">Aufgaben und Pflichten </a></b></li>
+        <li><b><a href="pages/Projektmanagement.htm">#Definierung </a></b></li>
+        <li><b><a href="pages/Projektmanagement.htm">#Planung </a></b></li>
+        <li><b><a href="pages/Projektmanagement.htm">#Aufgaben und Pflichten </a></b></li>
         <h3>Methoden und Anwendung </h3>
         <li><b><a href="pages/Projektmanagement.htm"></a></b></li>
         <li><b><a href="pages/Projektmanagement.htm">###</a></b></li>
         <li><b><a href="pages/Projektmanagement.htm">###</a></b></li>
         <h3>Wirtschaftlichkeit</h3>
-        <li><b><a href="pages/Wirtschaftlichkeit.htm">Bedarfsanalyse </a></b></li>
-        <li><b><a href="pages/Wirtschaftlichkeit.htm">Nutzwertanalyse </a></b></li>
-        <li><b><a href="pages/Wirtschaftlichkeit.htm">Angebotsvergleich </a></b></li>
+        <li><b><a href="pages/Wirtschaftlichkeit.htm">#Bedarfsanalyse </a></b></li>
+        <li><b><a href="pages/Wirtschaftlichkeit.htm">#Nutzwertanalyse </a></b></li>
+        <li><b><a href="pages/Wirtschaftlichkeit.htm">#Angebotsvergleich </a></b></li>
       </ul>
     </div>
     <div class="in-inside">
       <ul>
         <h3>Qualitätssicherung </h3>
-        <li><b><a href="pages/Qualitaetssicherung.htm">Grundsätze </a></b></li>
-        <li><b><a href="pages/Qualitaetssicherung.htm">Anforderungen </a></b></li>
-        <li><b><a href="pages/Qualitaetssicherung.htm">Management </a></b></li>
+        <li><b><a href="pages/Qualitaetssicherung.htm">#Grundsätze </a></b></li>
+        <li><b><a href="pages/Qualitaetssicherung.htm">#Anforderungen </a></b></li>
+        <li><b><a href="pages/Qualitaetssicherung.htm">#Management </a></b></li>
         <h3>Marketing </h3>
-        <li><b><a href="pages/Marketing.htm">Fachbegriffe </a></b></li>
-        <li><b><a href="pages/Marketing.htm">Grundfunktionen </a></b></li>
-        <li><b><a href="pages/Marketing.htm">Produktlebebnszyklen</a></b></li>
+        <li><b><a href="pages/Marketing.htm">#Fachbegriffe </a></b></li>
+        <li><b><a href="pages/Marketing.htm">#Grundfunktionen </a></b></li>
+        <li><b><a href="pages/Marketing.htm">#Produktlebebnszyklen</a></b></li>
         <h3>Zusammenfassung </h3>
         <li><b><a href="pages/Projektmanagement.htm">Projektmanagement </a></b></li>
-        <li><b><a href="pages/Qualitaetssicherung.htm">Qualitätsicherung </a></b></li>
-        <li><b><a href="pages/Marketing.htm">Marketing </a></b></li>
+        <li><b><a href="pages/Qualitaetssicherung.htm">#Qualitätsicherung </a></b></li>
+        <li><b><a href="pages/Marketing.htm">#Marketing </a></b></li>
       </ul>
     </div>
   </div>
 
 </article>
-<article id="Grid-Area-5" class="content flow">
-<h1 id="bigHL">### </h1>
+<article id="area-5" class="content flow">
+<h1>### </h1>
   <div class="inside-content">
     <div class="in-inside">
       <ul>
@@ -226,7 +226,7 @@ body {
         <li><b><a href="pages/###">###</a></b></li>
       </ul>
     </div>
-    <div id="disabled" class="in-inside">
+    <div style="visibility:hidden;" class="in-inside">
       <ul>
         <h3>### </h3>
         <li><b><a href="pages/###">###</a></b></li>
