--- a/index.html
+++ b/index.html
@@ -14,13 +14,22 @@
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <style>
 :root { /* Farben */
-	--vader-black: #131313;
+	--the-darkness: #000;
+	--shadow-grey: #131313;
 	--pipi-white: #ebebd3;
 	--matrix-green: #8dd88e;
-	--neon-blue: #00f0f0;
+	--laser-blue: #00f0f0;
 	--neon-pink: #ffbfea;
+	--high-ground: rgba(0,0,0,0.1);
+	--space-motion:
+        rgba(0, 240, 240, 0.4) 0px 2px 4px,
+        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
+        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+    --ants-cry:
+        rgba(0, 0, 0, 0.1) 0px 2px 4px,
+        rgba(0, 0, 0, 0.4) 0px -2px 0px inset;
 }
-html {background-color: var(--vader-black);}
+html {background-color: var(--alien-shadow);}
 body {
     position: relative;/* Footer-Einfluss */
     height: 100%;/* Footer-Einfluss */
@@ -44,7 +53,7 @@ body {
         aria-expanded="false">
   <span class="hidden-menu">Menu</span>
   <div class="menu-icon" aria-hidden="true"></div>
-</button></div><div class="header-text"><span><!-- .header-text --></span>
+</button></div><div class="header-text"><span><!-- Textbanner --></span>
 <!-- MENU -->
 <ul data-state="closed" class="menu-list">
 <li><a href="Content.htm"><i class="list-icon">
@@ -60,26 +69,25 @@ body {
 <div class="grid-container">
 <article id="area-1" class="content flow">
 <!-- HELLO WORLD -->
-<section>
-<h3>print("hello world")</h3>
-    <q>Diese Website ist im Aufbau</q>
-	<ul style="font-size:small;">
-	<li>[2019-06] Domain gemietet</li>
-	<li>[2020/21] Konzeptentwicklung</li>
-	<li>[2022-11] Ausarbeitung</li>
-	<li>[2023-03] Designentwicklung</li>
-	<li>[2023-08] Github-Anbindung</li>
-	<li>[2023-10] Integration</li></ul></section>
+<hgroup><h1>print("hello world")</h1><h2>WTF is <span class="jumi-font">jumi.biz</span> ?</h2></hgroup>
+<aside>
+  <ul style="font-size:small;">
+  <caption>Diese Website ist im Aufbau</caption>
+  <li>[2019-06] Domain gemietet</li>
+  <li>[2020/21] Konzeptentwicklung</li>
+  <li>[2022-11] Ausarbeitung</li>
+  <li>[2023-03] Designentwicklung</li>
+  <li>[2023-08] Github-Anbindung</li>
+  <li>[2023-10] Integration</li></ul></aside>
 	<!-- WTF -->
 <section>
-<h3>WTF is Jumi.biz ?</h3><p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen.</p>
-<!-- ABOUT --></section>
+<p>Hier findest du Zusammenfassungen zu <a href="https://www.jumi.biz/Content.htm">
+Themen</a> über Linux Windows Cybersecurity Hacking Coding Shell Tools Network-Basics.</p>
+<!-- ABOUT -->
+<aside><p></aside>
 <aside>
-<h3><a href="https://www.jumi.biz/Content.htm">
-Themen:</a></h3>Linux Windows Cybersecurity Hacking Coding Shell Tools Network-Basics</aside>
-<section>
-<h4>Tasten-Steuerung</h4>
 <table id="tasten-steuerung">
+<caption>Tasten-Steuerung</caption></section>
     <thead>
         <tr>
         <th>Vollbild</th>
@@ -96,32 +104,46 @@ Themen:</a></h3>Linux Windows Cybersecurity Hacking Coding Shell Tools Network-B
         <td><span>Enter</span></td>
         </tr>
     </tbody>
-</table><section>
+</table></aside>
 </article>
 <article id="area-2" class="content flow">
 <h2>&#36; whoami</h2>
 <div class="flex">
-<!-- PICTURE -->
-<img id="modalTrigger01" src="assets/img/profile-img-1.png"
-alt="Picture shows Jumi">
-<dialog id="openModal01">
-<figure><img src="assets/img/modal/profile-img-modal-01.png" alt="Image-Modal" id="imgModal01"><figcaption>
-<h2>Human Interface</h2></figcaption>
-<button id="closeModal01"> &times; </button></figure></dialog>
-<!-- PICTURE -->
-<img id="modalTrigger02" src="assets/img/profile-img-2.png"
-alt="Picture shows shoe">
-<dialog id="openModal02">
-<figure><img src="assets/img/modal/profile-img-modal-02.png" alt="Image-Modal" id="imgModal02"><figcaption>
-<h2>Local Area</h2></figcaption>
-<button id="closeModal02"> &times; </button></figure></dialog>
-<!-- PICTURE -->
-<img id="modalTrigger03" src="assets/img/profile-img-3.png"
-alt="Picture shows computer">
-<dialog id="openModal03">
-<figure><img src="assets/img/modal/profile-img-modal-03.png" alt="Image-Modal" id="imgModal03"><figcaption>
-<h2>Central Processing</h2></figcaption>
-<button id="closeModal03"> &times; </button></figure></dialog></div><br>
+  <!-- PICTURE -->
+  <img id="modalTrigger01" src="assets/img/profile-img-1.png" alt="Picture shows Jumi">
+  <dialog id="openModal01">
+    <figure>
+      <img src="assets/img/modal/profile-img-modal-01.png" alt="Image-Modal" id="imgModal01">
+      <figcaption>
+        <h2>Human Interface</h2>
+      </figcaption>
+      <button id="closeModal01"> &times; </button>
+    </figure>
+  </dialog>
+  <!-- PICTURE -->
+  <img id="modalTrigger02" src="assets/img/profile-img-2.png" alt="Picture shows shoe">
+  <dialog id="openModal02">
+    <figure>
+      <img src="assets/img/modal/profile-img-modal-02.png" alt="Image-Modal" id="imgModal02">
+      <figcaption>
+        <h2>Local Area</h2>
+      </figcaption>
+      <button id="closeModal02"> &times; </button>
+    </figure>
+  </dialog>
+  <!-- PICTURE -->
+  <img id="modalTrigger03" src="assets/img/profile-img-3.png" alt="Picture shows computer">
+  <dialog id="openModal03">
+    <figure>
+      <img src="assets/img/modal/profile-img-modal-03.png" alt="Image-Modal" id="imgModal03">
+      <figcaption>
+        <h2>Central Processing</h2>
+      </figcaption>
+      <button id="closeModal03"> &times; </button>
+    </figure>
+  </dialog>
+</div>
+<br>
 <!-- PERSON -->
     <p>Mir macht es Spass, mich mit IT zu beschäftigen und Texte für Lernzwecke zu minimalisieren. Die Quellen meiner Textinhalte sind öffentliche Personen mit großer Reichweite oder private Weiterbildungen.</p>
     <q>Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske.</q><figcaption><cite>- V wie Vendetta</cite> (2005)</figcaption>
@@ -151,8 +173,8 @@ alt="Picture shows computer">
 <article id="area-5" class="content flow">
 <h2>Quiz-Raum 3327</h2>
 <details class="flow">
-<summary>&nbsp;I have keys but no doors. I have space but no room.<br>&nbsp;&nbsp;&nbsp;You can enter but can’t leave. What am I?</summary>
-<br><h1>A keyboard.</h1>
+<summary>I have keys but no doors. I&nbsp;have space but no room. You&nbsp;can enter but can’t leave.<br>What am I ?</summary>
+<br><span class="quiz-answers">A keyboard</span>
 </details>
 <q>Die Wissenschaft ist&nbsp;bestrebt, die&nbsp;Welt um uns herum zu&nbsp;verstehen. Die&nbsp;Technologie hingegen strebt danach, sie zu&nbsp;beherrschen.</q>
 <figcaption><cite>- Nikola Tesla</cite> (1856-1943)</figcaption>
@@ -189,4 +211,5 @@ alt="Picture shows computer">
 <!-- SCRIPTS -->
 <script src="assets/js/menu.js"></script>
 <script src="assets/js/modal.js"></script>
+
 </body></html>
