--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@ body {
 <div class="grid-container">
 <article id="area-1" class="content flow">
 <!-- HELLO WORLD -->
-<hgroup><h1>print("hello world")</h1><h2>WTF is <span class="jumi-font">jumi.biz</span> ?</h2></hgroup>
+<section><hgroup><h1>print("hello world")</h1><h3>WTF is <span class="jumi-font">jumi.biz</span> ?</h3></hgroup>
+
+<p>Hier findest du Zusammenfassungen zu <a href="https://www.jumi.biz/Content.htm">
+Themen</a> über Linux Windows Cybersecurity Hacking Coding Shell Tools Network-Basics.</p></section>
+<!-- ABOUT -->
+<aside><p></aside>
 <aside>
   <ul style="font-size:small;">
   <caption>Diese Website ist im Aufbau</caption>
@@ -79,15 +84,9 @@ body {
   <li>[2023-03] Designentwicklung</li>
   <li>[2023-08] Github-Anbindung</li>
   <li>[2023-10] Integration</li></ul></aside>
-	<!-- WTF -->
-<section>
-<p>Hier findest du Zusammenfassungen zu <a href="https://www.jumi.biz/Content.htm">
-Themen</a> über Linux Windows Cybersecurity Hacking Coding Shell Tools Network-Basics.</p>
-<!-- ABOUT -->
-<aside><p></aside>
 <aside>
 <table id="tasten-steuerung">
-<caption>Tasten-Steuerung</caption></section>
+<caption>Tasten-Steuerung</caption>
     <thead>
         <tr>
         <th>Vollbild</th>
